Reverted min-height; it introduces a layout bug on wider screens.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -205,10 +205,6 @@ nav.primary a:hover {
 	max-width: 75rem;
 }
 
-#home {
-	min-height: 30em;
-}
-
 #home .wrap {
 	padding: 0 5%;
 }
